--- a/Task_1/Task_Mvc/Task_Mvc.csproj
+++ b/Task_1/Task_Mvc/Task_Mvc.csproj
@@ -14,8 +14,8 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Task_Mvc</RootNamespace>
     <AssemblyName>Task_Mvc</AssemblyName>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <!-- <TargetFrameworkVersion>v4.8</TargetFrameworkVersion> -->
+    <!-- <TargetFramework>netcoreapp3.1</TargetFramework> -->
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
