--- a/Task_1/Task_Mvc/Task_Mvc.csproj
+++ b/Task_1/Task_Mvc/Task_Mvc.csproj
@@ -31,6 +31,7 @@
     </NuGetPackageImportStamp>
   </PropertyGroup>
 
+<!-- below 3 line added by me -->
   <ItemGroup>
     <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.3" PrivateAssets="All" />
   </ItemGroup>
@@ -144,9 +145,9 @@
 
 	<!-- below 3 line entered by me -->
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="3.1.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor" Version="3.1.0" />
+<!--    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor" Version="3.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="3.1.0" />
-
+-->
 <!--
     <Reference Include="System.Web.Optimization">
       <HintPath>..\Task_Api\packages\Microsoft.AspNet.Web.Optimization.1.1.3\lib\net40\System.Web.Optimization.dll</HintPath>
