--- a/Task_1/Task_Mvc/Task_Mvc.csproj
+++ b/Task_1/Task_Mvc/Task_Mvc.csproj
@@ -143,9 +143,9 @@
     </Reference>
 -->
 
-	<!-- below 3 line entered by me -->
+<!-- below 3 line entered by me 
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="3.1.0" />
-<!--    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor" Version="3.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor" Version="3.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="3.1.0" />
 -->
 <!--
